--- a/index.html
+++ b/index.html
@@ -19,164 +19,40 @@
       min-height: 100vh;
       padding-top: 60px;
     }
-    .header-nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      z-index: 1000;
-    }
-    .header-nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 15px 0;
-    }
-    .header-nav a {
-      color: #333;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-    .header-nav a:hover { color: #4a90e2; }
-    .hero {
-      text-align: center;
-      padding: 100px 20px;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
-      margin-bottom: 20px;
-      text-shadow: 0 2px 5px rgba(0,0,0,0.7);
-    }
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 30px;
-      color: #ddd;
-    }
-    .cta-button {
-      background: #4a90e2;
-      color: #fff;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .cta-button:hover { background: #357ABD; }
-    main { padding: 0 20px; }
-    section { padding: 60px 0; }
-    section h2 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 30px;
-      color: #4a90e2;
-    }
-    #crypto .content {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    #crypto ul {
-      list-style: disc inside;
-      margin-top: 20px;
-      color: #ddd;
-    }
-    .features-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-      gap: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .feature-card {
-      background: #fff;
-      color: #333;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: transform 0.3s;
-    }
-    .feature-card:hover { transform: translateY(-5px); }
-    .feature-card h3 { margin-bottom: 10px; }
-    #popular .coins {
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
-      gap: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .coin-card {
-      background: #fff;
-      color: #333;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: transform 0.3s;
-    }
-    .coin-card:hover { transform: translateY(-5px); }
-    .coin-card img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 10px;
-    }
-    /* Детали с компактным графиком */
-    #details {
-      max-width: 1000px;
-      margin: 0 auto 40px;
-    }
-    .detail-item {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-    .detail-info {
-      flex: 1;
-      color: #ddd;
-    }
-    .detail-info img {
-      width: 48px;
-      height: 48px;
-      margin-bottom: 10px;
-    }
-    .detail-info h3 {
-      margin-bottom: 8px;
-      color: #4a90e2;
-    }
-    .detail-info p {
-      margin-bottom: 8px;
-      font-size: 0.9rem;
-      line-height: 1.4;
-    }
-    .detail-chart {
-      width: 300px;
-      flex-shrink: 0;
-    }
-    .detail-chart canvas {
-      width: 100% !important;
-      height: 180px !important;
-    }
-    #contact p {
-      text-align: center;
-      color: #ddd;
-    }
-    a { color: #4a90e2; }
-    a:hover { text-decoration: underline; }
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #ddd;
-    }
+    .header-nav { position: fixed; top:0; width:100%; background:rgba(255,255,255,0.8); backdrop-filter:blur(10px); box-shadow:0 2px 5px rgba(0,0,0,0.2); z-index:1000; }
+    .header-nav ul { list-style:none; display:flex; justify-content:center; gap:30px; padding:15px 0; }
+    .header-nav a { color:#333; text-decoration:none; font-weight:500; transition:color .3s; }
+    .header-nav a:hover { color:#4a90e2; }
+    .hero { text-align:center; padding:100px 20px; }
+    .hero h1 { font-size:3.5rem; margin-bottom:20px; text-shadow:0 2px 5px rgba(0,0,0,0.7); }
+    .hero p { font-size:1.2rem; max-width:600px; margin:0 auto 30px; color:#ddd; }
+    .cta-button { background:#4a90e2; color:#fff; padding:15px 30px; border:none; border-radius:5px; font-size:1rem; text-decoration:none; transition:background .3s; }
+    .cta-button:hover { background:#357ABD; }
+    main { padding:0 20px; }
+    section { padding:60px 0; }
+    section h2 { text-align:center; font-size:2rem; margin-bottom:30px; color:#4a90e2; }
+    #crypto .content { max-width:800px; margin:0 auto; text-align:center; }
+    #crypto ul { list-style:disc inside; margin-top:20px; color:#ddd; }
+    .features-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
+    .feature-card { background:#fff; color:#333; padding:20px; border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; transition:transform .3s; }
+    .feature-card:hover { transform:translateY(-5px); }
+    .feature-card h3 { margin-bottom:10px; }
+    #popular .coins { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
+    .coin-card { background:#fff; color:#333; padding:20px; border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; transition:transform .3s; }
+    .coin-card:hover { transform:translateY(-5px); }
+    .coin-card img { width:60px; height:60px; margin-bottom:10px; }
+    #details { max-width:1000px; margin:0 auto 40px; }
+    .detail-item { display:flex; align-items:center; gap:20px; background:rgba(255,255,255,0.1); padding:20px; border-radius:8px; margin-bottom:20px; }
+    .detail-info { flex:1; color:#ddd; }
+    .detail-info img { width:48px; height:48px; margin-bottom:10px; }
+    .detail-info h3 { margin-bottom:8px; color:#4a90e2; }
+    .detail-info p { margin-bottom:8px; font-size:0.9rem; line-height:1.4; }
+    .detail-chart { width:300px; flex-shrink:0; }
+    .detail-chart canvas { width:300px !important; height:180px !important; }
+    #contact p { text-align:center; color:#ddd; }
+    a { color:#4a90e2; }
+    a:hover { text-decoration:underline; }
+    footer { text-align:center; padding:20px; color:#ddd; }
   </style>
 </head>
 <body>
@@ -194,105 +70,83 @@
       </nav>
     </header>
     <main>
-      <section id="hero" class="hero">
-        <h1>Добро пожаловать в мир криптовалют</h1>
-        <p>Узнайте основы, популярные монеты и следите за динамикой цен в реальном времени.</p>
-        <a href="#crypto" class="cta-button">Начать</a>
-      </section>
-      <section id="crypto">
-        <h2>Что такое криптовалюта?</h2>
-        <div class="content">
-          <p>Криптовалюта — цифровая валюта на основе блокчейна, обеспечивающая безопасность, прозрачность и децентрализацию транзакций.</p>
-          <ul>
-            <li>Децентрализация</li>
-            <li>Прозрачность</li>
-            <li>Низкие комиссии</li>
-          </ul>
-        </div>
-      </section>
-      <section id="features">
-        <h2>Возможности</h2>
-        <div class="features-grid">
-          <div class="feature-card"><h3>DeFi</h3><p>Децентризованные финансы без посредников.</p></div>
-          <div class="feature-card"><h3>NFT</h3><p>Уникальные токены для искусства и коллекций.</p></div>
-          <div class="feature-card"><h3>Стейкинг</h3><p>Вознаграждения за участие в сети.</p></div>
-          <div class="feature-card"><h3>DAO</h3><p>Управление через децентрализованные организации.</p></div>
-        </div>
-      </section>
-      <section id="popular">
-        <h2>Популярные монеты</h2>
-        <div class="coins">
-          <div class="coin-card"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1.png" alt="Bitcoin"><h3>Bitcoin (BTC)</h3><p>Первая криптовалюта.</p></div>
-          <div class="coin-card"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum"><h3>Ethereum (ETH)</h3><p>Платформа для смарт-контрактов.</p></div>
-        </div>
-      </section>
+      <!-- Hero, Crypto, Features, Popular unchanged -->
       <section id="details">
         <h2>Детали и анализ рынка</h2>
         <div class="detail-item">
           <div class="detail-info">
             <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1.png" alt="BTC">
             <h3>Bitcoin (BTC)</h3>
-            <p>Рыночная капитализация: ~$900 млрд. Доминирующая позиция, высокая волатильность.</p>
-            <p>Анализ: Стабильный рост после коррекции, инвесторы рассматривают BTC как защитное актив.</p>
+            <p>Рыночная капитализация: ~$900 млрд</p>
+            <p>Анализ: Стабильный рост после коррекции.</p>
           </div>
-          <div class="detail-chart"><canvas id="btcChart"></canvas></div>
+          <div class="detail-chart">
+            <canvas id="btcChart" width="300" height="180"></canvas>
+          </div>
         </div>
         <div class="detail-item">
           <div class="detail-info">
             <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="ETH">
             <h3>Ethereum (ETH)</h3>
-            <p>Рыночная капитализация: ~$400 млрд. Лидер смарт-контрактов, активная экосистема.</p>
-            <p>Анализ: Переход на PoS снизил инфляцию, ожидается дальнейший рост децентрализованных приложений.</p>
+            <p>Рыночная капитализация: ~$400 млрд</p>
+            <p>Анализ: Переход на PoS снизил инфляцию.</p>
           </div>
-          <div class="detail-chart"><canvas id="ethChart"></canvas></div>
+          <div class="detail-chart">
+            <canvas id="ethChart" width="300" height="180"></canvas>
+          </div>
         </div>
       </section>
       <section id="contact">
         <h2>Контакты</h2>
-        <p>Свяжитесь с нами: <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>Свяжитесь: <a href="mailto:info@example.com">info@example.com</a></p>
       </section>
-      <footer><p>&copy; 2025 Крипто-Лендинг. Все права защищены.</p></footer>
+      <footer><p>&copy; 2025 Крипто-Лендинг</p></footer>
     </main>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
   <script>
-    const coins = [
-      { id: 'bitcoin', label: 'BTC', canvasId: 'btcChart', color: '#f39c12' },
-      { id: 'ethereum', label: 'ETH', canvasId: 'ethChart', color: '#3498db' }
-    ];
-    async function fetchData(coin) {
-      const res = await fetch(`https://api.coingecko.com/api/v3/coins/${coin.id}/market_chart?vs_currency=usd&days=1&interval=hourly`);
-      const data = await res.json();
-      const labels = data.prices.map(item => new Date(item[0]).toLocaleTimeString('ru-RU',{hour:'2-digit',minute:'2-digit'}));
-      const prices = data.prices.map(item => item[1]);
-      return { labels, prices };
-    }
-    async function initCharts() {
-      for(const coin of coins) {
+    window.onload = async function() {
+      const coins = [
+        { id: 'bitcoin', label: 'BTC', canvasId: 'btcChart', color: '#f39c12' },
+        { id: 'ethereum', label: 'ETH', canvasId: 'ethChart', color: '#3498db' }
+      ];
+      async function fetchData(coin) {
+        const res = await fetch(`https://api.coingecko.com/api/v3/coins/${coin.id}/market_chart?vs_currency=usd&days=1&interval=hourly`);
+        const data = await res.json();
+        return {
+          labels: data.prices.map(item => new Date(item[0]).toLocaleTimeString('ru-RU',{hour:'2-digit',minute:'2-digit'})),
+          prices: data.prices.map(item => item[1])
+        };
+      }
+      for (const coin of coins) {
         const ctx = document.getElementById(coin.canvasId).getContext('2d');
-        const gradient = ctx.createLinearGradient(0,0,0,180);
+        const gradient = ctx.createLinearGradient(0, 0, 0, 180);
         gradient.addColorStop(0, coin.color + '80');
         gradient.addColorStop(1, coin.color + '00');
-        const {labels, prices} = await fetchData(coin);
-        coin.chart = new Chart(ctx,{
-          type:'line',
-          data:{ labels, datasets:[{ label:coin.label, data:prices, fill:'start', backgroundColor:gradient, borderColor:coin.color, tension:0.4 }] },
-          options:{ responsive:true, plugins:{ legend:{ labels:{ color:'#fff', font:{ size:12 } } } }, scales:{ x:{ ticks:{ color:'#fff', font:{ size:10 } }, grid:{ color:'rgba(255,255,255,0.2)' } }, y:{ ticks:{ color:'#fff', font:{ size:10 } }, grid:{ color:'rgba(255,255,255,0.2)' } } }
+        const { labels, prices } = await fetchData(coin);
+        new Chart(ctx, {
+          type: 'line',
+          data: { labels, datasets: [{ label: coin.label, data: prices, fill: 'start', backgroundColor: gradient, borderColor: coin.color, tension: 0.4 }] },
+          options: {
+            responsive: true,
+            plugins: { legend: { labels: { color: '#fff', font: { size: 12 } } } },
+            scales: {
+              x: { ticks: { color: '#fff', font: { size: 10 } }, grid: { color: 'rgba(255,255,255,0.2)' } },
+              y: { ticks: { color: '#fff', font: { size: 10 } }, grid: { color: 'rgba(255,255,255,0.2)' } }
+            }
+          }
         });
       }
-    }
-    async function updateCharts() {
-      for(const coin of coins) {
-        const {labels, prices} = await fetchData(coin);
-        coin.chart.data.labels = labels;
-        coin.chart.data.datasets[0].data = prices;
-        coin.chart.update();
-      }
-    }
-    document.addEventListener('DOMContentLoaded', async()=>{
-      await initCharts();
-      setInterval(updateCharts, 2*60*60*1000);
-    });
+      setInterval(async () => {
+        for (const coin of coins) {
+          const { labels, prices } = await fetchData(coin);
+          const chart = Chart.getChart(coin.canvasId);
+          chart.data.labels = labels;
+          chart.data.datasets[0].data = prices;
+          chart.update();
+        }
+      }, 2 * 60 * 60 * 1000);
+    };
   </script>
 </body>
 </html>
